--- a/Server/MindHorizon/Areas/Admin/Views/Category/Index.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Category/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "دسته بندی ها";
+    ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -32,7 +32,7 @@
     <div class="row mt-5">
         <div class="card shadow w-100">
             <div class="card-header font_Vazir_Medium">
-                مدیریت دسته بندی پست ها
+                مدیریت دسته بندی اخبار
             </div>
             <div class="card-body">
                 @await Html.PartialAsync("_CategoryTable")
