--- a/Server/MindHorizon/Views/Shared/_AdminLayout.cshtml
+++ b/Server/MindHorizon/Views/Shared/_AdminLayout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
     <meta name="author" content="Creative Tim">
-    <title>پنل مدیریت سایت افق ذهن</title>
+    <title>پنل مدیریت سایت افق فکر</title>
     <!-- Favicon -->
     <link href="/assets/img/favicon.png" rel="icon" type="image/png">
     <!-- Icons -->
@@ -34,7 +34,7 @@
             <!-- Brand -->
             <a class="navbar-brand pt-0" href="./index.html">
                 <img src="/assets/img/Logo.png" class="navbar-brand-img" alt="...">
-                پنل مدیریت افق ذهن
+                پنل مدیریت افق فکر
             </a>
             <!-- User -->
             <ul class="nav align-items-center d-md-none">
@@ -42,7 +42,7 @@
                     <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="media align-items-center">
                             <span class="avatar avatar-sm rounded-circle">
-                                <img alt="Image placeholder" src="/assets/img/Mojtaba.jpg">
+                                <img alt="Image placeholder" src="~/assets/img/Mojtaba.jpg">
                             </span>
                         </div>
                     </a>
@@ -66,7 +66,7 @@
                     <div class="row">
                         <div class="col-9 collapse-brand">
                             <a href="./index.html">
-                                <img src="~/assets/img/Logo.png"> پنل مدیریت افق ذهن
+                                <img src="~/assets/img/Logo.png"> پنل مدیریت افق فکر
                             </a>
                         </div>
                         <div class="col-3 collapse-close">
@@ -92,7 +92,7 @@
             <div class="row align-items-center justify-content-xl-between">
                 <div class="col-xl-6">
                     <div class="copyright text-center text-xl-left text-muted">
-                        2019  &copy;  <a href="www.mindhorizon.com" class="font-weight-bold ml-1" target="_blank">MindHorizon.com</a>
+                        2019  &copy;  <a href="https://www.mindhorizon.com" class="font-weight-bold ml-1" target="_blank">MindHorizon.com</a>
                     </div>
                 </div>
             </div>
