Add Category solved

--- a/Server/MindHorizon/Views/Shared/_AdminLogin.cshtml
+++ b/Server/MindHorizon/Views/Shared/_AdminLogin.cshtml
@@ -6,7 +6,7 @@
                     <img alt="Image placeholder" src="~/assets/img/Mojtaba.jpg">
                 </span>
                 <div class="media-body ml-2 d-none d-lg-block">
-                    <span class="mb-0 text-sm  font-weight-bold">مجتبی حسینی</span>
+                    <span class="mb-0 text-sm  font-weight-bold">مجتبی</span>
                 </div>
             </div>
         </a>
