--- a/Server/MindHorizon/Areas/Admin/Views/Category/Index.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Category/Index.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+<div id="modal-placeholder"></div>
 <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
     <div class="container-fluid">
         <!-- Brand -->
