--- a/Server/MindHorizon/Areas/Admin/Views/Category/_CategoryTable.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Category/_CategoryTable.cshtml
@@ -1,8 +1,8 @@
 ﻿
 <div id="toolbar">
-        <button type="button" class="btn btn-success" data-toggle="ajax-modal" data-url="@Url.Action("RenderCategory","Category")">
-            <i class="fa fa-plus"></i> | افزودن دسته بندی جدید
-        </button>
+    <button type="button" class="btn btn-success" data-toggle="ajax-modal" data-url="@Url.Action("RenderCategory","Category")">
+        <i class="fa fa-plus"></i> | افزودن دسته بندی جدید
+    </button>
 </div>
 <table id="table"
        data-toolbar="#toolbar"
@@ -64,16 +64,21 @@
         }
 
 
-        function operateFormatter(value, row, index) {
-            return [
-                '<a class="like" href="javascript:void(0)" title="Like">',
-                '<i class="fa fa-heart"></i>',
-                '</a>  ',
-                '<a class="remove" href="javascript:void(0)" title="Remove">',
-                '<i class="fa fa-trash"></i>',
-                '</a>'
-            ].join('')
-        }
+         function operateFormatter(value, row, index) {
+        return [
+            '<button type="button" class="btn-link text-success" data-toggle="ajax-modal" data-url=@Url.Action("RenderCategory", "Category")?categoryId=' + row.Id + ' title="ویرایش">',
+            '<i class="fa fa-edit"></i>',
+            '</button >',
+
+            '<button type="button" class="btn-link text-danger" data-toggle="ajax-modal" data-url=@Url.Action("Delete", "Category")/?categoryId=' + row.Id + ' title="حذف">',
+            '<i class="fa fa-trash"></i>',
+            '</button >'
+        ].join('')
+    }
+
+     function checkBoxFormat(value, row) {
+       return '<input type="checkbox" name="btSelectItem" value="' + row.Id + '" />';
+    }
 
 
         function totalTextFormatter(data) {
@@ -95,7 +100,8 @@
                         checkbox: true,
                         rowspan: 2,
                         align: 'center',
-                        valign: 'middle'
+                        valign: 'middle',
+                        formatter: checkBoxFormat
                     }, {
                         title: 'ردیف',
                         field: 'ردیف',
