add url validation and some bug fix

--- a/Server/MindHorizon/wwwroot/assets/css/argon.css
+++ b/Server/MindHorizon/wwwroot/assets/css/argon.css
@@ -8370,7 +8370,7 @@ button.bg-darker:focus {
 
 .ml-2,
 .mx-2 {
-    margin-right: .5rem !important;
+    margin-left: .5rem !important;
 }
 
 .m-3 {
