add role manager and tag and video controller

--- a/Server/MindHorizon/Areas/Admin/Views/Category/_DeleteConfirmation.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Category/_DeleteConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model  MindHorizon.Entities.Category
+﻿@model  Category
 
 <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
