--- a/Server/MindHorizon/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,10 @@
 ﻿@addTagHelper*,MindHorizon
 @addTagHelper*,Microsoft.AspNetCore.Mvc.TagHelpers
+@using MindHorizon.Entities
+@using MindHorizon.Entities.Identity
+@using MindHorizon.ViewModels.RoleManager
+@using MindHorizon.ViewModels.Category
+@using MindHorizon.ViewModels.Tag
+@using MindHorizon.ViewModels.Video
 
 
