--- a/Server/MindHorizon/Areas/Admin/Views/Category/_RenderCategory.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Category/_RenderCategory.cshtml
@@ -1,4 +1,4 @@
-﻿@model MindHorizon.ViewModels.Category.CategoryViewModel
+﻿@model CategoryViewModel
 <link href="~/lib/comboTreePlugin/comboTreePlugin.css" rel="stylesheet" />
 <script src="~/lib/comboTreePlugin/comboTreePlugin.js"></script>
 
