add user manager and login and some other stuf

--- a/Server/MindHorizon/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using MindHorizon.ViewModels.Category
 @using MindHorizon.ViewModels.Tag
 @using MindHorizon.ViewModels.Video
+@using MindHorizon.ViewModels.UserManager
 
 
