--- a/Server/MindHorizon/Views/Shared/_AdminLayout.cshtml
+++ b/Server/MindHorizon/Views/Shared/_AdminLayout.cshtml
@@ -24,6 +24,10 @@
     <link href="~/lib/sweetalert2/dist/sweetalert2.min.css" rel="stylesheet" />
     <script src="~/lib/sweetalert2/dist/sweetalert2.min.js"></script>
 
+    <!-- DateTimePicker -->
+    <link href="~/lib/bootstrap.datetimepicker/css/jquery.md.bootstrap.datetimepicker.style.css" rel="stylesheet" />
+    <script src="~/lib/bootstrap.datetimepicker/js/jquery.md.bootstrap.datetimepicker.js"></script>
+
     <link href="~/css/bootstrap-fileinput.css" rel="stylesheet" />
     <script src="~/js/bootstrap-fileinput.min.js"></script>
     <!-- Bootstrap Table -->
@@ -111,7 +115,7 @@
 
     <script src="/assets/js/argon.js?v=1.0.0"></script>
 
-
+    @RenderSection("Scripts",false)
 
 </body>
 </html>
