compelete add post

--- a/Server/MindHorizon/Areas/Admin/Views/Category/Index.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Category/Index.cshtml
@@ -33,7 +33,7 @@
     <div class="row mt-5">
         <div class="card shadow w-100">
             <div class="card-header font_Vazir_Medium">
-                مدیریت دسته بندی اخبار
+                مدیریت دسته بندی پست ها
             </div>
             <div class="card-body">
                 <form asp-area="Admin" asp-controller="Category">
