--- a/Server/MindHorizon/Areas/Admin/Views/Post/CreateOrUpdate.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Post/CreateOrUpdate.cshtml
@@ -171,7 +171,7 @@
                                     <input type="submit" value="ذخیره پیش نویس" class="btn btn-success btn-sm" name="submitButton" />
                                 </div>
                             </div>
-                            <div class="card mb-2">
+                            @*<div class="card mb-2">
                                 <div class="card-header pt-2 pb-2 bg-light">نوع پست</div>
                                 <div class="card-body">
                                     <p>نوع پست را انتخاب کنید.</p>
@@ -188,7 +188,7 @@
                                     <span class="clearfix"></span>
                                     <span asp-validation-for="IsInternal" class="text-danger"></span>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="card mb-2">
                                 <div class="card-header pt-2 pb-2 bg-light">دسته بندی</div>
                                 <div class="card-body">
@@ -278,7 +278,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">بستن</button>
-                <button type="button" id="cropImageBtn" class="btn btn-sm btn-primary mr-2">برش</button>
+                <button type="button" id="cropImageBtn" class="btn btn-sm btn-primary mr-2">برش و انتخاب</button>
             </div>
         </div>
     </div>
