--- a/Server/MindHorizon/Views/Shared/_AdminMenu.cshtml
+++ b/Server/MindHorizon/Views/Shared/_AdminMenu.cshtml
@@ -16,8 +16,8 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-action="Index" asp-controller="News">
-                <i class="ni ni-folder-17 text-blue"></i> مدیریت اخبار
+            <a class="nav-link" asp-action="Index" asp-controller="Post">
+                <i class="ni ni-folder-17 text-blue"></i> مدیریت پست ها
             </a>
         </li>
 
