add index for post

--- a/Server/MindHorizon/Areas/Admin/Views/Manage/ChangePassword.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Manage/ChangePassword.cshtml
@@ -76,10 +76,11 @@
                         </ul>
                     </div>
                 </div>
-             
+
             </div>
         </div>
     </div>
+</div>
 
 
 
