--- a/Server/MindHorizon/Areas/Admin/Views/Post/Index.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Post/Index.cshtml
@@ -16,7 +16,7 @@
                 <i class="fa fa-angle-left text-white align-middle"></i>
             </li>
             <li>
-                <a class="h4 mb-0 text-white d-lg-inline-block" href="./index.html">مدیریت پست ها</a>
+                <a class="h4 mb-0 text-white d-lg-inline-block" href="./index.html">مدیریت مطلب ها</a>
             </li>
 
         </ul>
@@ -33,7 +33,7 @@
     <div class="row mt-5">
         <div class="card shadow w-100">
             <div class="card-header font_Vazir_Medium">
-                مدیریت پست ها
+                مدیریت مطلب ها
             </div>
             <div class="card-body">
                 <form asp-area="Admin" asp-controller="Post">
