--- a/Server/MindHorizon/Areas/Admin/Views/Manage/ChangePassword.cshtml
+++ b/Server/MindHorizon/Areas/Admin/Views/Manage/ChangePassword.cshtml
@@ -48,7 +48,7 @@
                         }
 
                         <form asp-action="ChangePassword" method="post">
-                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div asp-validation-summary="ModelOnly" class="alert alert-danger mb-3"></div>
                             <div class="form-group">
                                 <label asp-for="OldPassword"></label>
                                 <input asp-for="OldPassword" class="form-control" />
