--- a/Server/MindHorizon/Views/Shared/_AdminMenu.cshtml
+++ b/Server/MindHorizon/Views/Shared/_AdminMenu.cshtml
@@ -17,7 +17,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" asp-action="Index" asp-controller="Post">
-                <i class="ni ni-folder-17 text-blue"></i> مدیریت پست ها
+                <i class="ni ni-folder-17 text-blue"></i> مدیریت مطالب 
             </a>
         </li>
 
