add most visited

--- a/Server/MindHorizon/wwwroot/css/style.css
+++ b/Server/MindHorizon/wwwroot/css/style.css
@@ -1999,3 +1999,7 @@ textarea.form-control {
 .is-sticky .classy-navbar .nav-brand {
   font-size: 18px;
 }
+
+a:not([href]):not([tabindex]) {
+    cursor: pointer !important;
+}
