--- a/Server/MindHorizon/Views/Shared/_AdminMenu.cshtml
+++ b/Server/MindHorizon/Views/Shared/_AdminMenu.cshtml
@@ -17,7 +17,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" asp-action="Index" asp-controller="Post">
-                <i class="ni ni-folder-17 text-blue"></i> مدیریت مطالب 
+                <i class="ni ni-folder-17 text-blue"></i> مدیریت مطالب
             </a>
         </li>
 
@@ -29,6 +29,11 @@
         <li class="nav-item">
             <a class="nav-link" asp-action="Index" asp-controller="UserManager">
                 <i class="fa fa-users text-yellow"></i> مدیریت کاربران
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-action="Index" asp-controller="Video">
+                <i class="fa fa-video text-yellow"></i> مدیریت ویدئو ها
             </a>
         </li>
         <li class="nav-item">
