add random video

--- a/Server/MindHorizon/Views/Home/Index.cshtml
+++ b/Server/MindHorizon/Views/Home/Index.cshtml
@@ -99,7 +99,7 @@
                     @if (Model.Videos.Count() != 0)
                     {
                         <div class="section-heading style-2">
-                            <h4> جدیدترین ویدیيها </h4>
+                            <h4> جدیدترین ویدئوها </h4>
                             <div class="line"></div>
                         </div>
 
