--- a/Server/MindHorizon/Views/Home/Index.cshtml
+++ b/Server/MindHorizon/Views/Home/Index.cshtml
@@ -124,7 +124,7 @@
 
                     <!-- Section Heading -->
                     <div class="section-heading style-2">
-                        <h4>آخرین اخبار</h4>
+                        <h4>آخرین مطالب</h4>
                         <div class="line"></div>
                     </div>
                     @if (Model.Post.Count() == 0)
@@ -189,21 +189,21 @@
                     }
 
                     <!-- ***** Single Widget ***** -->
-                    <div class="single-widget newsletter-widget mb-4 border">
+                    @*<div class="single-widget newsletter-widget mb-4 border">*@
                         <!-- Section Heading -->
-                        <div class="section-heading style-2 mb-30">
+                        @*<div class="section-heading style-2 mb-30">
                             <h4>عضویت در خبرنامه</h4>
                             <div class="line"></div>
                         </div>
-                        <p>جهت دریافت جدیدترین اخبار ایمیل خود را وارد کنید.</p>
+                        <p>جهت دریافت جدیدترین اخبار ایمیل خود را وارد کنید.</p>*@
                         <!-- Newsletter Form -->
-                        <div class="newsletter-form">
+                        @*<div class="newsletter-form">
                             <form action="#" method="post">
                                 <input type="email" name="nl-email" class="form-control mb-15" id="emailnl" placeholder="ایمیل خود را وارد کنید">
                                 <button type="submit" class="btn vizew-btn w-100">عضویت</button>
                             </form>
                         </div>
-                    </div>
+                    </div>*@
 
                     <!-- ***** Single Widget ***** -->
                     <div id="MostTalkPostsDiv">
