correction post details

--- a/Server/MindHorizon/Views/Home/Index.cshtml
+++ b/Server/MindHorizon/Views/Home/Index.cshtml
@@ -23,8 +23,8 @@
                                 <div class="single-feature-post video-post bg-img" style="background-image: url(/postImage/@item.ImageName);">
                                     <!-- Post Content -->
                                     <div class="post-content">
-                                        <a href="/@item.PostId/@item.Url" class="post-cata">@item.NameOfCategories</a>
-                                        <a href="single-post.html" class="post-title">@item.Title</a>
+                                        <a href="/Posts/@item.PostId/@item.Url" class="post-cata">@item.NameOfCategories</a>
+                                        <a href="/Posts/@item.PostId/@item.Url" class="post-title">@item.Title</a>
                                         <div class="post-meta d-flex float-left">
                                             <a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> @item.NumberOfComments</a>
                                             <a href="#"><i class="fa fa-eye" aria-hidden="true"></i> @item.NumberOfVisit</a>
@@ -150,7 +150,7 @@
                                         <!-- Post Content -->
                                         <div class="post-content mt-0">
                                             <a href="#" class="post-cata cata-sm cata-success">@item.NameOfCategories</a>
-                                            <a href="/@item.PostId/@item.Url" class="post-title mb-2">
+                                            <a href="/Posts/@item.PostId/@item.Url" class="post-title mb-2">
                                                 @item.Title
                                             </a>
                                             <div class="post-meta d-flex align-items-center mb-2">
