--- a/Server/MindHorizon/Views/Home/PostDetails.cshtml
+++ b/Server/MindHorizon/Views/Home/PostDetails.cshtml
@@ -185,7 +185,7 @@
                                     {
                                         <li class="single_comment_area">
                                             <!-- Comment Content -->
-                                            <div class="comment-content d-flex">
+                                            <div id="@("comment-"+item.CommentId)" class="comment-content d-flex">
                                                 <!-- Comment Author -->
                                                 <div class="comment-author">
                                                     <img src="~/assets/img/UserPic.png" alt="author">
@@ -196,7 +196,7 @@
                                                     <h6>@item.Name</h6>
                                                     <p>@item.Desription</p>
                                                     <div class="d-flex align-items-center">
-                                                        <a href="#" class="reply">پاسخ</a>
+                                                        <a id="@("btn-"+item.CommentId)" href="#" class="reply">پاسخ</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -207,7 +207,7 @@
                                                     @foreach (var sub in item.comments)
                                                     {
                                                         <li class="single_comment_area">
-                                                            <div class="comment-content d-flex">
+                                                            <div id="@("comment-"+sub.CommentId)" class="comment-content d-flex">
                                                                 <div class="comment-author">
                                                                     <img src="~/assets/img/UserPic.png" alt="author">
                                                                 </div>
@@ -216,7 +216,7 @@
                                                                     <h6>@sub.Name</h6>
                                                                     <p>@sub.Desription</p>
                                                                     <div class="d-flex align-items-center">
-                                                                        <a href="#" class="reply">پاسخ</a>
+                                                                        <a id="@("btn-"+sub.CommentId)" href="#" class="reply">پاسخ</a>
                                                                     </div>
                                                                 </div>
                                                             </div>
